k8s/services/ecommerce-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-dashboard
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-dashboard
  template:
    metadata:
      labels:
        app: ecommerce-dashboard
        sidecar.istio.io/inject: 'true'
      annotations:
        sidecar.istio.io/inject: 'true'
        traffic.sidecar.istio.io/excludeOutboundPorts: 5432,6379,9092,27017,4317,4318
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      nodeSelector:
        kubernetes.io/hostname: vm1-gateway
      containers:
      - name: ecommerce-dashboard
        image: hoangdonguit/ecommerce-dashboard:dashboard-ui-polish-20260529142705
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 300m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-dashboard
  namespace: default
spec:
  type: NodePort
  selector:
    app: ecommerce-dashboard
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30517
    name: http
    appProtocol: http
