k8s/services/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: vm2-mesh
      serviceAccountName: payment-api-sa
      containers:
      - name: payment-api
        image: hoangdonguit/payment-service:otel-full-saga-20260603005334
        command: ["/app/payment-api"]
        ports:
        - containerPort: 8083
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-consumer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-consumer
  template:
    metadata:
      labels:
        app: payment-consumer
    spec:
      nodeSelector:
        kubernetes.io/hostname: vm2-mesh
      serviceAccountName: payment-consumer-sa
      containers:
      - name: payment-consumer
        image: hoangdonguit/payment-service:otel-full-saga-20260603005334
        command: ["/app/payment-consumer"]
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: payment-api
  namespace: default
spec:
  selector:
    app: payment-api
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
