k8s/services/read-model-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-model-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read-model-service
  template:
    metadata:
      labels:
        app: read-model-service
      annotations:
        sidecar.istio.io/inject: 'true'
        traffic.sidecar.istio.io/excludeOutboundPorts: 5432,6379,9092,27017,4317,4318
    spec:
      nodeSelector:
        kubernetes.io/hostname: vm2-mesh
      serviceAccountName: read-model-service-sa
      containers:
      - name: read-model-service
        image: hoangdonguit/read-model-service:otel-full-saga-20260603005334
        ports:
        - containerPort: 8085
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: read-model-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: read-model-service
  ports:
  - name: http
    port: 8085
    targetPort: 8085
    appProtocol: http
